[package]
name = "uniswap-v2-sdk"
version = "2.0.0"
edition = "2021"
rust-version = "1.85"
authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
description = "Uniswap V2 SDK for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shuhuiluo/uniswap-v2-sdk-rs"
keywords = ["uniswap-v2", "ethereum", "sdk"]
exclude = [".github", ".gitignore", "rustfmt.toml"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
alloy-primitives = { version = "1.3", default-features = false }
alloy-sol-types = { version = "1.3", default-features = false }
once_cell = { version = "1.21", default-features = false, features = ["critical-section"] }
thiserror = { version = "2.0", default-features = false }
uniswap-sdk-core = "5.2.1"

[dev-dependencies]
once_cell = "1.21"

[features]
default = []
std = [
    "alloy-sol-types/std",
    "once_cell/std",
    "thiserror/std",
    "uniswap-sdk-core/std"
]
